--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,10 @@
     /* Подключение шрифта Allods West */
     @font-face {
         font-family: 'Allods West';
-        src: url('assets/fonts/allods_west.ttf') format('truetype');
+        src: url('assets/fonts/allodswest.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
+        font-display: swap;
     }
 
     /* Основные стили */
@@ -12,7 +13,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Allods West', 'Arial', sans-serif;
+        font-family: 'Allods West', fantasy, sans-serif;
         letter-spacing: 0.5px;
     }
     
